--- a/styles/EARPHONES.css
+++ b/styles/EARPHONES.css
@@ -1,286 +1,407 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Manrope';
-    font-style: normal;
-}
-
-.container {
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-}
-
-header {
-    width: 100%;
-    height: 336px;
-    background: #0E0E0E;
-}
-
-.header-nav {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 35px;
-    margin-bottom: 36px;
-}
-
-.header-item {
-    display: flex;
-}
-
-.header-item li {
-    list-style: none;
-}
-
-.group {
-    display: flex;
-    justify-content: space-between;
-    width: 35%;
-}
-
-.herader-list {
-    font-weight: 700;
-    text-decoration: none;
-    font-size: 13px;
-    color: #FFFFFF;
-}
-
-.header-title {
-    font-weight: 700;
-    font-size: 40px;
-    text-align: center;
-    color: #FFFFFF;
-    margin-top: 98px;
-}
-
-hr {
-    height: 1px;
-    opacity: 0.2;
-}
-
-.hero {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 160px;
-}
-
-.hero-title {
-    font-weight: 400;
-    font-size: 14px;
-    letter-spacing: 10px;
-    color: #D87D4A;
-    opacity: 0.5;
-    padding-top: 128px;
-}
-
-.hero-title2 {
-    width: 445px;
-    font-weight: 700;
-    font-size: 40px;
-    text-transform: uppercase;
-    color: #000000;
-    margin-top: 16px;
-}
-
-.hero-text {
-    width: 445px;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 25px;
-    color: #000000;
-    opacity: 0.5;
-    margin-top: 32px;
-    margin-bottom: 40px;
-}
-
-.hero-link {
-    font-weight: 700;
-    font-size: 13px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #FFFFFF;
-    background: #D87D4A;
-    padding: 15px 31px;
-}
-
-.hero-img {
-    margin-top: -100px;
-}
-
-.heroHeadphones {
-    margin-top: -130px;
-}
-
-.hero-img2 {
-    margin-top: -200px;
-}
-
-.content {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 200px;
-    margin-bottom: 168px;
-}
-
-.content-box {
-    width: 350px;
-    height: 204px;
-    text-align: center;
-    background: #F1F1F1;
-    border-radius: 8px;
-}
-
-.content-box img {
-    margin-top: -70px;
-    margin-bottom: 36px;
-}
-
-.content-box h1 {
-    font-weight: 700;
-    font-size: 18px;
-    text-align: center;
-    color: #000000;
-    margin-bottom: 15px;
-}
-
-.content-box a {
-    font-weight: 700;
-    font-size: 13px;
-    color: #000000;
-    opacity: 0.5;
-    text-decoration: none;
-    display: flex;
-    margin-left: 150px;
-}
-
-.content-box span img {
-    margin-top: 3px;
-    margin-left: 13px;
-}
-
-.content-box-h1 {
-    margin-top: 12px;
-}
-
-.content-box-title {
-    margin-top: 30px;
-}
-
-.center3 {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 50px;
-}
-
-.center-title3 {
-    font-weight: 700;
-    font-size: 28px;
-    letter-spacing: 2px;
-    color: #000000;
-    padding-top: 101px;
-    margin-bottom: 32px;
-}
-
-.heading {
-    width: 540px;
-    height: 320px;
-    background: #F1F1F1;
-    border-radius: 8px;
-}
-
-.center-link3 {
-    font-weight: 700;
-    font-size: 13px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #000000;
-    padding: 15px 31px;
-    border: 1px solid #000000;
-}
-
-.center3-h1 {
-    width: 445px;
-    font-weight: 700;
-    font-size: 40px;
-    text-transform: uppercase;
-    color: #000000;
-    margin-top: 150px;
-    margin-bottom: 32px;
-}
-
-.center3 span {
-    color: #D87D4A;
-}
-
-.center3-p {
-    width: 445px;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 25px;
-    color: #000000;
-    opacity: 0.5;
-}
-
-.footer {
-    background: #101010;
-    margin-top: 100px;
-}
-
-.footer-item {
-    display: flex;
-    justify-content: space-between;
-    padding-top: 75px;
-}
-
-.footer-items {
-    display: flex;
-    justify-content: space-between;
-}
-
-.footer-items li {
-    list-style: none;
-}
-
-.footer-link {
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 13px;
-    letter-spacing: 2px;
-    color: #FFFFFF;
-    margin-left: 20px;
-}
-
-.footer-item2 {
-    display: flex;
-    margin-top: 105px;
-    margin-left: 280px;
-}
-
-.footer-item2 li {
-    list-style: none;
-    margin-left: 10px;
-}
-
-.footer-text {
-    font-family: 'Manrope';
-    width: 540px;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 25px;
-    color: #FFFFFF;
-    opacity: 0.5;
-    margin-top: 36px;
-}
-
-.footer-text2 {
-    font-family: 'Manrope';
-    font-weight: 700;
-    font-size: 15px;
-    color: #FFFFFF;
-    opacity: 0.5;
-    margin-top: 56px;
-}
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    body {
+        font-family: 'Manrope';
+        font-style: normal;
+    }
+    
+    .container {
+        max-width: 1200px;
+        width: 100%;
+        margin: 0 auto;
+    }
+    
+    .menu {
+        display: none;
+    }
+    
+    header {
+        width: 100%;
+        height: 336px;
+        background: #0E0E0E;
+    }
+    
+    .header-nav {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 35px;
+        margin-bottom: 36px;
+    }
+    
+    .header-item {
+        display: flex;
+    }
+    
+    .header-item li {
+        list-style: none;
+    }
+    
+    .group {
+        display: flex;
+        justify-content: space-between;
+        width: 35%;
+    }
+    
+    .herader-list {
+        font-weight: 700;
+        text-decoration: none;
+        font-size: 13px;
+        color: #FFFFFF;
+    }
+    
+    .header-title {
+        font-weight: 700;
+        font-size: 40px;
+        text-align: center;
+        color: #FFFFFF;
+        margin-top: 98px;
+    }
+    
+    hr {
+        height: 1px;
+        opacity: 0.2;
+    }
+    
+    .hero {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 160px;
+    }
+    
+    .hero-title {
+        font-weight: 400;
+        font-size: 14px;
+        letter-spacing: 10px;
+        color: #D87D4A;
+        opacity: 0.5;
+        padding-top: 128px;
+    }
+    
+    .hero-title2 {
+        width: 445px;
+        font-weight: 700;
+        font-size: 40px;
+        text-transform: uppercase;
+        color: #000000;
+        margin-top: 16px;
+    }
+    
+    .hero-text {
+        width: 445px;
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 25px;
+        color: #000000;
+        opacity: 0.5;
+        margin-top: 32px;
+        margin-bottom: 40px;
+    }
+    
+    .hero-link {
+        font-weight: 700;
+        font-size: 13px;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: #FFFFFF;
+        background: #D87D4A;
+        padding: 15px 31px;
+    }
+    
+    .hero-img {
+        margin-top: -100px;
+    }
+    
+    .heroHeadphones {
+        margin-top: -130px;
+    }
+    
+    .hero-img2 {
+        margin-top: -200px;
+    }
+    
+    .content {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 200px;
+        margin-bottom: 168px;
+    }
+    
+    .content-box {
+        width: 350px;
+        height: 204px;
+        text-align: center;
+        background: #F1F1F1;
+        border-radius: 8px;
+    }
+    
+    .content-box img {
+        margin-top: -70px;
+        margin-bottom: 36px;
+    }
+    
+    .content-box h1 {
+        font-weight: 700;
+        font-size: 18px;
+        text-align: center;
+        color: #000000;
+        margin-bottom: 15px;
+    }
+    
+    .content-box a {
+        font-weight: 700;
+        font-size: 13px;
+        color: #000000;
+        opacity: 0.5;
+        text-decoration: none;
+        display: flex;
+        margin-left: 150px;
+    }
+    
+    .content-box span img {
+        margin-top: 3px;
+        margin-left: 13px;
+    }
+    
+    .content-box-h1 {
+        margin-top: 12px;
+    }
+    
+    .content-box-title {
+        margin-top: 30px;
+    }
+    
+    .center3,
+    .center4 {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 50px;
+    }
+    
+    .center4 {
+        padding-top: 150px;
+    }
+    
+    .center-title3 {
+        font-weight: 700;
+        font-size: 28px;
+        letter-spacing: 2px;
+        color: #000000;
+        padding-top: 101px;
+        margin-bottom: 32px;
+    }
+    
+    .heading {
+        width: 540px;
+        height: 320px;
+        background: #F1F1F1;
+        border-radius: 8px;
+    }
+    
+    .center-link3 {
+        font-weight: 700;
+        font-size: 13px;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: #000000;
+        padding: 15px 31px;
+        border: 1px solid #000000;
+    }
+    
+    .center3-h1 {
+        width: 445px;
+        font-weight: 700;
+        font-size: 40px;
+        text-transform: uppercase;
+        color: #000000;
+        margin-top: 150px;
+        margin-bottom: 32px;
+    }
+    
+    .center4 span {
+        color: #D87D4A;
+    }
+    
+    .center3-p {
+        width: 445px;
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 25px;
+        color: #000000;
+        opacity: 0.5;
+    }
+    
+    .footer {
+        background: #101010;
+        margin-top: 100px;
+    }
+    
+    .footer-item {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 75px;
+    }
+    
+    .footer-items {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .footer-items li {
+        list-style: none;
+    }
+    
+    .footer-link {
+        text-decoration: none;
+        font-weight: 700;
+        font-size: 13px;
+        letter-spacing: 2px;
+        color: #FFFFFF;
+        margin-left: 20px;
+    }
+    
+    .footer-item2 {
+        display: flex;
+        margin-top: 105px;
+        margin-left: 280px;
+    }
+    
+    .footer-item2 li {
+        list-style: none;
+        margin-left: 10px;
+    }
+    
+    .footer-text {
+        font-family: 'Manrope';
+        width: 540px;
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 25px;
+        color: #FFFFFF;
+        opacity: 0.5;
+        margin-top: 36px;
+    }
+    
+    .footer-text2 {
+        font-family: 'Manrope';
+        font-weight: 700;
+        font-size: 15px;
+        color: #FFFFFF;
+        opacity: 0.5;
+        margin-top: 56px;
+    }
+    
+    @media (max-width:768px) {
+        .container {
+            max-width: 668px;
+            width: 100%;
+            margin: 0 auto;
+        }
+        header {
+            width: 100%;
+            height: 236px;
+            background: #0E0E0E;
+        }
+        .group {
+            display: none;
+        }
+        main {
+            background: #0E0E0E;
+            height: 236px;
+        }
+        .menu {
+            display: block;
+            padding: 3px 20px;
+        }
+        .header-title {
+            margin-top: 200px;
+        }
+        .hero {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            padding-top: 120px;
+        }
+        .hero-img {
+            padding-top: 220px;
+        }
+        .hero-title2 {
+            margin-left: 112px;
+        }
+        .hero-text {
+            width: 572px;
+            margin-left: 56px;
+        }
+        .hero2 {
+            display: flex;
+            flex-direction: column-reverse;
+        }
+        .content-box {
+            width: 215px;
+        }
+        .content-box a {
+            margin-left: 85px;
+        }
+        .center3 {
+            display: flex;
+            flex-direction: column;
+        }
+        .center3 img {
+            width: 340px;
+            height: 320px;
+        }
+        .heading {
+            text-align: center;
+        }
+        .center4 {
+            display: flex;
+            flex-direction: column-reverse;
+            padding-top: 0px;
+        }
+        .center4 img {
+            margin-top: 40px;
+        }
+        .center3-h1 {
+            margin-top: 50px;
+        }
+        .center4-group {
+            text-align: center;
+            margin-left: 77px;
+        }
+        .footer {
+            width: 768px;
+            height: 350px;
+        }
+        .footer-item {
+            display: flex;
+            flex-direction: column;
+        }
+        .footer-items {
+            margin-top: -190px;
+            justify-content: left;
+            margin-bottom: 150px;
+        }
+        .footer-link {
+            margin: 0;
+            padding-left: 20px;
+        }
+        .footer-one {
+            padding: 0;
+        }
+        .footer-text {
+            margin-top: 50px;
+            width: 689px;
+        }
+        .footer-item2 {
+            margin-left: 500px;
+        }
+        .center3-h1 {
+            width: 573px;
+        }
+        .center3-p {
+            width: 573px;
+        }
+    }
