--- a/styles/PRODUCT.css
+++ b/styles/PRODUCT.css
@@ -49,14 +49,6 @@
         color: #FFFFFF;
     }
     
-    .header-title {
-        font-weight: 500;
-        font-size: 15px;
-        color: #000000;
-        opacity: 0.5;
-        padding-top: 79px;
-    }
-    
     .hero {
         display: flex;
         justify-content: space-between;
@@ -242,6 +234,10 @@
         margin-bottom: 15px;
     }
     
+    .menu {
+        display: none;
+    }
+    
     .content-box a {
         font-weight: 700;
         font-size: 13px;
@@ -265,10 +261,15 @@
         margin-top: 30px;
     }
     
-    .center3 {
+    .center3,
+    .center4 {
         display: flex;
         justify-content: space-between;
         padding-top: 50px;
+    }
+    
+    .center4 {
+        padding-top: 150px;
     }
     
     .center-title3 {
@@ -307,7 +308,7 @@
         margin-bottom: 32px;
     }
     
-    .center3 span {
+    .center4 span {
         color: #D87D4A;
     }
     
@@ -378,4 +379,105 @@
         color: #FFFFFF;
         opacity: 0.5;
         margin-top: 56px;
+    }
+    
+    @media (max-width:768px) {
+        .container {
+            max-width: 668px;
+            width: 100%;
+            margin: 0 auto;
+        }
+        header {
+            width: 100%;
+            height: 80px;
+            background: #0E0E0E;
+        }
+        .header-list {
+            margin-left: -290px;
+        }
+        .group {
+            display: none;
+        }
+        main {
+            background: #0E0E0E;
+            height: 800px;
+        }
+        .hero-img {
+            width: 290px;
+            height: 326px;
+            margin-left: -550px;
+        }
+        .hero-group {
+            z-index: 1;
+            padding-left: 160px;
+            text-align: center;
+        }
+        .menu {
+            display: block;
+            padding: 3px 20px;
+        }
+        .hero-title {
+            text-align: center;
+        }
+        .content-box {
+            width: 215px;
+        }
+        .content-box a {
+            margin-left: 85px;
+        }
+        .center {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            height: 950px;
+        }
+        .center3 img {
+            width: 340px;
+            height: 320px;
+        }
+        .heading {
+            text-align: center;
+        }
+        .center4 {
+            display: flex;
+            flex-direction: column-reverse;
+            padding-top: 0px;
+        }
+        .center4 img {
+            margin-top: 40px;
+        }
+        .center3-h1 {
+            margin-top: 50px;
+        }
+        .center4-group {
+            text-align: center;
+            margin-left: 77px;
+        }
+        .footer {
+            width: 768px;
+            height: 350px;
+        }
+        .footer-item {
+            display: flex;
+            flex-direction: column;
+        }
+        .footer-items {
+            margin-top: -190px;
+            justify-content: left;
+            margin-bottom: 150px;
+        }
+        .footer-link {
+            margin: 0;
+            padding-left: 20px;
+        }
+        .footer-one {
+            padding: 0;
+        }
+        .footer-text {
+            margin-top: 50px;
+            width: 689px;
+        }
+        .footer-item2 {
+            margin-left: 500px;
+        }
     }
